--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,8 @@ jobs:
 
       - name: Run test.sh for each agent
         run: |
+          cd tasks-2025/task_5
           for agent in $TEST_AGENTS; do
             echo "Testing $agent against $LAST_BEST_AGENT"
-            ./tasks-2025/task_5/test.sh $LAST_BEST_AGENT $agent linux 20
+            ./test.sh $LAST_BEST_AGENT $agent linux 20
           done
