improve best agent

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ __pycache__/
 /tasks-2025/task_5/agent.py  
 /tasks-2025/task_5/agent_1.py
 /tasks-2025/task_5/agent_2.py
+/tasks-2025/task_5/agent_3.py
